--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "Food Delivery",
+  "name": "Food ",
   "short_name": "FoodApp",
   "description": "We are providing the best foods",
   "start_url": "/",
