--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "Food ",
+  "name": "Food Delivery",
   "short_name": "FoodApp",
   "description": "We are providing the best foods",
   "start_url": "/",
@@ -8,7 +8,11 @@
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
- 
+    {
+      "src": "/logo.png",
+      "sizes": "192x192",
+      "type": "assets/png"
+    },
     {
       "src": "/pizza.jpg",
       "sizes": "512x512",
